style(survey): update to flex auto and add 'Save Survey' button

--- a/libs/survey-creator/src/lib/pages/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/pages/design-preview-container.component.html
@@ -1,192 +1,217 @@
 `
-<div class="section-wrapper" cdkDropListGroup>
-    <section class="design-preview-section">
-        <mat-tab-group
-            #tabGroup
-            mat-align-tabs="start"
-            animationDuration="0ms"
-            (selectedTabChange)="tabChanged($event)"
-        >
-            <mat-tab label="Design">
-                <ng-template matTabContent class="design-content">
-                    <div class="survey-title">
-                        <input-title
-                            [placeholder]="'Survey Title'"
-                            [fontSize]="16"
-                            [id]="'survey-title-design'"
-                            (keyup)="onKey($event)"
-                        ></input-title>
-                    </div>
-                    <div class="selected-questions-container">
-                        <div
-                            id="question_bank"
-                            cdkDropList
-                            cdkDropListConnectedTo="question_bank"
-                            (cdkDropListDropped)="
-                                surveyCreatorService.drop($event)
-                            "
-                            class="selected-questions-list"
-                        >
-                            <div *ngIf="selected_questions.length; else none">
+<section class="page-wrapper">
+    <header class="heading-wrapper">
+        <div class="left-wrapper">
+            <span><mat-icon class="back-arrow">arrow_back</mat-icon></span>
+            <span class="page-heading">New Survey</span>
+        </div>
+
+        <div class="right-wrapper">
+            <button mat-button class="add-button" color="primary">
+                Save Survey
+            </button>
+        </div>
+    </header>
+    <div class="dropdown-options"></div>
+
+    <div class="section-wrapper" cdkDropListGroup>
+        <section class="design-preview-section">
+            <mat-tab-group
+                #tabGroup
+                mat-align-tabs="start"
+                animationDuration="0ms"
+                (selectedTabChange)="tabChanged($event)"
+            >
+                <mat-tab label="Design">
+                    <ng-template matTabContent class="design-content">
+                        <div class="survey-title">
+                            <input-title
+                                [placeholder]="'Survey Title'"
+                                [fontSize]="16"
+                                [id]="'survey-title-design'"
+                                (keyup)="onKey($event)"
+                            ></input-title>
+                        </div>
+                        <div class="selected-questions-container">
+                            <div
+                                id="question_bank"
+                                cdkDropList
+                                cdkDropListConnectedTo="question_bank"
+                                (cdkDropListDropped)="
+                                    surveyCreatorService.drop($event)
+                                "
+                                class="selected-questions-list"
+                            >
                                 <div
-                                    *ngFor="let item of selected_questions"
-                                    [cdkDropListData]="selected_questions"
-                                    cdkDrag
+                                    *ngIf="selected_questions.length; else none"
                                 >
-                                    <rating-question
-                                        *ngIf="item.type === 'Rating'"
-                                        [question]="item"
-                                        [preview]="false"
-                                        [draft]="false"
+                                    <div
+                                        *ngFor="let item of selected_questions"
+                                        [cdkDropListData]="selected_questions"
+                                        cdkDrag
                                     >
-                                    </rating-question>
-                                    <text-question
-                                        *ngIf="item.type === 'Text'"
-                                        [question]="item"
-                                        [preview]="false"
-                                        [view]="'nonDraft'"
-                                    ></text-question>
-                                    <comment-box-question
-                                        *ngIf="item.type === 'Comment'"
-                                        [question]="item"
-                                        [preview]="false"
-                                        [draft]="false"
-                                    ></comment-box-question>
-                                    <checkbox-question
-                                        *ngIf="item.type === 'Checkbox'"
-                                        [question]="item"
-                                        [preview]="false"
-                                        [draft]="false"
-                                    ></checkbox-question>
-                                    <dropdown-question
-                                        *ngIf="item.type === 'Dropdown'"
-                                        [question]="item"
-                                        [preview]="false"
-                                        [draft]="false"
-                                    ></dropdown-question>
+                                        <rating-question
+                                            *ngIf="item.type === 'Rating'"
+                                            [question]="item"
+                                            [preview]="false"
+                                            [draft]="false"
+                                        >
+                                        </rating-question>
+                                        <text-question
+                                            *ngIf="item.type === 'Text'"
+                                            [question]="item"
+                                            [preview]="false"
+                                            [view]="'nonDraft'"
+                                        ></text-question>
+                                        <comment-box-question
+                                            *ngIf="item.type === 'Comment'"
+                                            [question]="item"
+                                            [preview]="false"
+                                            [draft]="false"
+                                        ></comment-box-question>
+                                        <checkbox-question
+                                            *ngIf="item.type === 'Checkbox'"
+                                            [question]="item"
+                                            [preview]="false"
+                                            [draft]="false"
+                                        ></checkbox-question>
+                                        <dropdown-question
+                                            *ngIf="item.type === 'Dropdown'"
+                                            [question]="item"
+                                            [preview]="false"
+                                            [draft]="false"
+                                        ></dropdown-question>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </ng-template>
-            </mat-tab>
-            <mat-tab label="Preview">
-                <ng-template matTabContent class="preview-content">
-                    <div class="preview-survey-title">
-                        <span>
-                            {{
-                                surveyCreatorService.survey_title$ | async
-                            }}</span
-                        >
-                    </div>
+                    </ng-template>
+                </mat-tab>
+                <mat-tab label="Preview">
+                    <ng-template matTabContent class="preview-content">
+                        <div class="preview-survey-title">
+                            <span>
+                                {{
+                                    surveyCreatorService.survey_title$ | async
+                                }}</span
+                            >
+                        </div>
 
-                    <div class="preview-questions-container">
-                        <div
-                            *ngIf="!selected_questions.length"
-                            class="none-selected"
-                        >
-                            <img
-                                src="assets/icons/dragdrop.svg"
-                                alt="Icon"
-                                height="30px"
-                            />
-                            <span
-                                >Please add a question in the 'Design' tab</span
+                        <div class="preview-questions-container">
+                            <div
+                                *ngIf="!selected_questions.length"
+                                class="none-selected"
                             >
-                        </div>
-                        <div
-                            *ngFor="let item of selected_questions"
-                            class="preview-list"
-                        >
-                            <rating-question
-                                *ngIf="item.type === 'Rating'"
-                                [question]="item"
-                                [preview]="true"
-                                [draft]="false"
+                                <img
+                                    src="assets/icons/dragdrop.svg"
+                                    alt="Icon"
+                                    height="30px"
+                                />
+                                <span
+                                    >Please add a question in the 'Design'
+                                    tab</span
+                                >
+                            </div>
+                            <div
+                                *ngFor="let item of selected_questions"
+                                class="preview-list"
                             >
-                            </rating-question>
-                            <text-question
-                                *ngIf="item.type === 'Text'"
-                                [question]="item"
-                                [preview]="true"
-                                [draft]="false"
-                            ></text-question>
-                            <comment-box-question
-                                *ngIf="item.type === 'Comment'"
-                                [question]="item"
-                                [preview]="true"
-                                [draft]="false"
-                            ></comment-box-question>
-                            <checkbox-question
-                                *ngIf="item.type === 'Checkbox'"
-                                [question]="item"
-                                [preview]="true"
-                                [draft]="false"
-                            ></checkbox-question>
-                            <dropdown-question
-                                *ngIf="item.type === 'Dropdown'"
-                                [question]="item"
-                                [preview]="true"
-                                [draft]="false"
-                            ></dropdown-question>
-                        </div>
-                        <div
-                            class="preview-list"
-                            *ngIf="selected_questions.length"
-                        >
-                            <button
-                                mat-button
-                                color="primary"
-                                class="complete-button"
-                                (click)="surveyCreatorService.submitSurvey()"
+                                <rating-question
+                                    *ngIf="item.type === 'Rating'"
+                                    [question]="item"
+                                    [preview]="true"
+                                    [draft]="false"
+                                >
+                                </rating-question>
+                                <text-question
+                                    *ngIf="item.type === 'Text'"
+                                    [question]="item"
+                                    [preview]="true"
+                                    [draft]="false"
+                                ></text-question>
+                                <comment-box-question
+                                    *ngIf="item.type === 'Comment'"
+                                    [question]="item"
+                                    [preview]="true"
+                                    [draft]="false"
+                                ></comment-box-question>
+                                <checkbox-question
+                                    *ngIf="item.type === 'Checkbox'"
+                                    [question]="item"
+                                    [preview]="true"
+                                    [draft]="false"
+                                ></checkbox-question>
+                                <dropdown-question
+                                    *ngIf="item.type === 'Dropdown'"
+                                    [question]="item"
+                                    [preview]="true"
+                                    [draft]="false"
+                                ></dropdown-question>
+                            </div>
+                            <div
+                                class="preview-list"
+                                *ngIf="selected_questions.length"
                             >
-                                Complete
-                            </button>
+                                <button
+                                    mat-button
+                                    color="primary"
+                                    class="complete-button"
+                                    (click)="
+                                        surveyCreatorService.submitSurvey()
+                                    "
+                                >
+                                    Complete
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                </ng-template>
-            </mat-tab>
-        </mat-tab-group>
-    </section>
-    <aside class="question-bank-section">
-        <header class="header">
-            <span class="title">Question Bank</span>
-            <div class="edit-add-buttons">
-                <button-borderless
-                    [button_title]="'Edit'"
-                    [icon]="'edit'"
-                    [icon_color]="'blue'"
-                    [text_color]="'blue'"
-                    (click)="openEditQuestionBankDialog()"
-                ></button-borderless>
-                <button-borderless
-                    [button_title]="'Add'"
-                    [icon]="'add'"
-                    [icon_color]="'blue'"
-                    [text_color]="'blue'"
-                    (click)="openAddQuestionBankDialog()"
-                ></button-borderless>
-            </div>
-        </header>
-        <search-bar [view]="'button'"></search-bar>
-        <ng-container #outlet [ngTemplateOutlet]="content"> </ng-container>
-
-        <ng-template #content class="question-bank-container">
-            <div
-                id="selected_questions"
-                cdkDropList
-                cdkDropListConnectedTo="selected_questions"
-                [cdkDropListData]="this.question_bank$ | async"
-                (cdkDropListDropped)="surveyCreatorService.drop($event)"
-                [cdkDropListEnterPredicate]="noReturnPredicate"
-            >
-                <div *ngFor="let item of this.question_bank$ | async" cdkDrag>
-                    <question-list-item [question]="item"> </question-list-item>
+                    </ng-template>
+                </mat-tab>
+            </mat-tab-group>
+        </section>
+        <aside class="question-bank-section">
+            <header class="header">
+                <span class="title">Question Bank</span>
+                <div class="edit-add-buttons">
+                    <button-borderless
+                        [button_title]="'Edit'"
+                        [icon]="'edit'"
+                        [icon_color]="'blue'"
+                        [text_color]="'blue'"
+                        (click)="openEditQuestionBankDialog()"
+                    ></button-borderless>
+                    <button-borderless
+                        [button_title]="'Add'"
+                        [icon]="'add'"
+                        [icon_color]="'blue'"
+                        [text_color]="'blue'"
+                        (click)="openAddQuestionBankDialog()"
+                    ></button-borderless>
                 </div>
-            </div>
-        </ng-template>
-    </aside>
-</div>
+            </header>
+            <search-bar [view]="'button'"></search-bar>
+            <ng-container #outlet [ngTemplateOutlet]="content"> </ng-container>
+
+            <ng-template #content class="question-bank-container">
+                <div
+                    id="selected_questions"
+                    cdkDropList
+                    cdkDropListConnectedTo="selected_questions"
+                    [cdkDropListData]="this.question_bank$ | async"
+                    (cdkDropListDropped)="surveyCreatorService.drop($event)"
+                    [cdkDropListEnterPredicate]="noReturnPredicate"
+                >
+                    <div
+                        *ngFor="let item of this.question_bank$ | async"
+                        cdkDrag
+                    >
+                        <question-list-item [question]="item">
+                        </question-list-item>
+                    </div>
+                </div>
+            </ng-template>
+        </aside>
+    </div>
+</section>
 
 <ng-template #none>
     <div class="none-selected">
