--- a/libs/survey-creator/src/lib/pages/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/pages/design-preview-container.component.html
@@ -12,7 +12,41 @@
             </button>
         </div>
     </header>
-    <div class="dropdown-options"></div>
+
+    <div class="dropdown-options">
+        <div class="dropdown-container">
+            <mat-label>Building</mat-label>
+            <mat-form-field appearance="outline" class="dropdown">
+                <mat-select
+                    [(value)]="selected_building"
+                    (selectionChange)="updateBuilding()"
+                >
+                    <mat-option
+                        *ngFor="let building of buildings"
+                        [value]="building.name"
+                    >
+                        {{ building.name }}</mat-option
+                    >
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="dropdown-container">
+            <mat-label>Location</mat-label>
+            <mat-form-field appearance="outline" class="dropdown">
+                <mat-select
+                    [(value)]="selected_location"
+                    (selectionChange)="updateLocation()"
+                >
+                    <mat-option
+                        *ngFor="let location of locations"
+                        [value]="location.name"
+                    >
+                        {{ location.name }}</mat-option
+                    >
+                </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
 
     <div class="section-wrapper" cdkDropListGroup>
         <section class="design-preview-section">
