--- a/libs/survey-creator/src/lib/pages/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/pages/design-preview-container.component.html
@@ -7,7 +7,12 @@
         </div>
 
         <div class="right-wrapper">
-            <button mat-button class="add-button" color="primary">
+            <button
+                mat-button
+                class="add-button"
+                color="primary"
+                (click)="surveyCreatorService.saveSurvey()"
+            >
                 Save Survey
             </button>
         </div>
