refactor(survey): finish param routing in Lib Routing Module

--- a/libs/survey-creator/src/lib/pages/design-preview-container.component.html
+++ b/libs/survey-creator/src/lib/pages/design-preview-container.component.html
@@ -254,12 +254,7 @@
                                     mat-button
                                     color="primary"
                                     class="complete-button"
-                                    (click)="
-                                        surveyCreatorService.submitSurvey()
-                                    "
-                                    [routerLink]="
-                                        '/list/{{selected_building.name}}'
-                                    "
+                                    (click)="complete()"
                                 >
                                     Complete
                                 </button>
